--- a/.github/workflows/fires_action.yml
+++ b/.github/workflows/fires_action.yml
@@ -10,12 +10,12 @@ name: Wildfire data maps scrape reshape build
 jobs:
   render:
     name: Scrape fire data
-    runs-on: macos-latest
+    runs-on: macos-12
     steps:
       - uses: actions/checkout@v4
       - uses: r-lib/actions/setup-r@v2
       - name: Set up pandoc for Rmd docs
-        uses: r-lib/actions/setup-pandoc@v3
+        uses: r-lib/actions/setup-pandoc@v2
       - name: Restore R packages cache
         uses: actions/cache@v2
         with:
